--- a/Policheck/Views/MainWindow.xaml
+++ b/Policheck/Views/MainWindow.xaml
@@ -431,54 +431,32 @@
         </Viewbox>
 
         
-        <Viewbox Name="Vbx_FormularioDenuncia" Grid.Column="0" HorizontalAlignment="Center" Grid.Row="1" MaxHeight="700" Visibility="Hidden">
+        <Viewbox Name="Vbx_FormularioDenuncia" Grid.Column="0" HorizontalAlignment="Center" Grid.Row="1" MaxHeight="400" Visibility="Hidden">
 
             <Border Background="#AA1E1E1E" CornerRadius="15" Padding="15" BorderBrush="White" BorderThickness="1" Width="250" >
                 <StackPanel Width="220">
-                    
-                    <Label Content="Direccion" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox x:Name="txtdireccionDen" Margin="5" Width="180"   Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+                    <Label Content="DNI" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox x:Name="txtdniDen" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
 
-                    <Label Content="CP" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox x:Name="txtCcodigoPostalDen" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+                    <Label Content="Nombre" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox x:Name="txtNombreDen" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
 
-                    <Label Content="Distrito" Foreground="White"  HorizontalAlignment="Center"/>
-                    <PasswordBox x:Name="txtDistritoDen" Margin="5" Width="180"   Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
-
-                    <Label Content="titulo" Foreground="White"  HorizontalAlignment="Center"/>
+                    <Label Content="Titulo" Foreground="White"  HorizontalAlignment="Center"/>
                     <TextBox x:Name="txttituloDen" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
 
                     <Label Content="Descipcion" Foreground="White"  HorizontalAlignment="Center"/>
                     <TextBox x:Name="txtdescripcionDen" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
-                    
+
                     <Label Content="Categoria" Foreground="White"  HorizontalAlignment="Center"/>
                     <TextBox x:Name="txtcategoriaDen" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
 
-                    <Label Content="DNI" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox x:Name="txtdniDen" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
-
-                    <Label Content="Fecha Nacimiento" Foreground="White"  HorizontalAlignment="Center"/>
-                    
-                    <DatePicker  Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"></DatePicker>
-                    
-                    <Label Content="Turno" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox  Margin="5" Width="180"  Foreground="Black" BorderBrush= "#BDBDBD" BorderThickness="1" IsReadOnly="True"/>
-                    <ComboBox Width="180" IsReadOnly="True" Visibility="Visible" SelectionChanged="SeleccionTurno" >
-                        <ComboBoxItem Content="Mañana" />
-                        <ComboBoxItem Content="Tarde" />
-                        <ComboBoxItem Content="Noche" />
-                    </ComboBox>
-
-                    <Label Content="Rango" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox Margin="5" Width="180" IsReadOnly="True"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
-                    <ComboBox Width="180" Visibility="Visible" IsReadOnly="True" SelectionChanged="SeleccionRango" />
-
-                    <Label Content="Distrito" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox  Margin="5" Width="180" IsReadOnly="True" Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
-                    <ComboBox  Width="180" Visibility="Visible" IsReadOnly="True" SelectionChanged ="SeleccionDistrito"></ComboBox>
                 </StackPanel>
             </Border>
         </Viewbox>
+        
+        
+        
+        
     </Grid>
 
 </Window>
