--- a/Policheck/Views/MainWindow.xaml
+++ b/Policheck/Views/MainWindow.xaml
@@ -414,7 +414,7 @@
         </Viewbox>
 
 
-        <Viewbox Name="Vbx_AccionesDatos" HorizontalAlignment="Center"  Grid.Row="1" Grid.Column="2"  MaxHeight="300" Visibility="Collapsed" >
+        <Viewbox Name="Vbx_AccionesDatos" HorizontalAlignment="Center"  Grid.Row="1" Grid.Column="2"  MaxHeight="500" Visibility="Collapsed" >
 
             <Border Background="#AA1E1E1E" CornerRadius="15" Padding="15" Margin="10"
             BorderBrush="White"  BorderThickness="1">
@@ -422,6 +422,8 @@
                     <TextBox Name="txtbx_buscar" Height="30"  Padding="5" Background="White" Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1" />
                     <Separator Opacity="0"></Separator>
                     <Button Content="🔍 Buscar" Height="50" Margin="5" Background="#1976D2" Foreground="White" FontWeight="Bold" BorderBrush="#BDBDBD" BorderThickness="1" Click="FiltroGeneral" />
+                    <Label Content="🎡 Categoria"  Foreground="White" FontSize="12" Width="150" FontWeight="Bold" HorizontalContentAlignment="Center" HorizontalAlignment="Center" Background="#1976D2" Cursor=""   />
+                    <ComboBox Name="cmbxCategoriaDatoDen"   Margin="5" Width="180" IsEditable="False"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
                     <Button Content="🔄 Restaurar" Height="50" Margin="5" Background="#1976D2" Foreground="White" FontWeight="Bold" BorderBrush="#BDBDBD" BorderThickness="1" Click="Btn_Restablecer"/>
                     <Button Content="✏️ Modificar" Height="50" Margin="5" Background="#007ACC"  Foreground="White" FontWeight="Bold" BorderBrush="#BDBDBD" BorderThickness="1" Click="Btn_Modificar"/>
                     <Button Name="btn_MasDetalles" Content="ℹ️ Mas Detalles" Height="50" Margin="5" Background="#007ACC"  Foreground="White" FontWeight="Bold" BorderBrush="#BDBDBD" BorderThickness="1" />
@@ -431,7 +433,7 @@
         </Viewbox>
 
         
-        <Viewbox Name="Vbx_FormularioDenuncia" Grid.Column="0" HorizontalAlignment="Center" Grid.Row="1" MaxHeight="400" Visibility="Hidden">
+        <Viewbox Name="Vbx_FormularioDenuncia" Grid.Column="0" HorizontalAlignment="Center" Grid.Row="1" MaxHeight="300" Visibility="Hidden">
 
             <Border Background="#AA1E1E1E" CornerRadius="15" Padding="15" BorderBrush="White" BorderThickness="1" Width="250" >
                 <StackPanel Width="220">
@@ -453,10 +455,106 @@
                 </StackPanel>
             </Border>
         </Viewbox>
-        
-        
-        
-        
+
+        <Viewbox x:Name="Vbx_FormularioCiudadano" Grid.Column="0" HorizontalAlignment="Center" Grid.Row="1" MaxHeight="700" Visibility="Hidden">
+
+            <Border Background="#AA1E1E1E" CornerRadius="15" Padding="15" BorderBrush="White" BorderThickness="1" Width="250" >
+                <StackPanel Width="220">
+                    <Label Content="Nº Placa" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox x:Name="txtNumPlacaCiu" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1" IsReadOnly="True"/>
+
+                    <Label Content="DNI" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox x:Name="txtDNIC" Margin="5" Width="180"   Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Nombre" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox x:Name="txtNombreC" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="1ºApellido" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox x:Name="txtPrimerApellC" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="2ºApellido" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox x:Name="txtSegunApellC" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Género" Foreground="White"  HorizontalAlignment="Center"/>
+                    <ComboBox x:Name="cmbxGeneroC" Margin="5" Width="180" Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1" IsEditable="False">
+                        <ComboBoxItem Content="M" />
+                        <ComboBoxItem Content="F" />
+                    </ComboBox>
+
+                    <Label Content="Correo" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox x:Name="txtCorreoC" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Teléfono" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox x:Name="txtTelefonoC" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Fecha Nacimiento" Foreground="White"  HorizontalAlignment="Center"/>
+                    <DatePicker x:Name="datpick_FechaNacimientoC" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Direccion" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox x:Name="txtDireccionC" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Estado Judicial" Foreground="White"  HorizontalAlignment="Center"/>
+                    <ComboBox x:Name="cmbx_EstadoJudicialCiu" Width="180" Visibility="Visible" IsReadOnly="True"  />
+
+                </StackPanel>
+            </Border>
+        </Viewbox>
+
+        <Viewbox Name="Vbx_FormularioFuncionario" Grid.Column="0" HorizontalAlignment="Center" Grid.Row="1" MaxHeight="700" Visibility="Hidden">
+
+            <Border Background="#AA1E1E1E" CornerRadius="15" Padding="15" BorderBrush="White" BorderThickness="1" Width="250" >
+                <StackPanel Width="220">
+                    <Label Content="Nº Placa" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Name="txtNumPlacaFun" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1" IsReadOnly="True"/>
+
+                    <Label Content="DNI" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Name="txtDNIFun" Margin="5" Width="180"   Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Nombre" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Name="txtNomFunc" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Contraseña" Foreground="White"  HorizontalAlignment="Center"/>
+                    <PasswordBox Name="passFun" Margin="5" Width="180"   Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="1ºApellido" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Name="txtPrimerApellFun" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="2ºApellido" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Name="txtSegunApellFun" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Género" Foreground="White"  HorizontalAlignment="Center"/>
+                    <ComboBox Name="cmbxGeneroFun" Margin="5" Width="180" Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1" IsEditable="False">
+                        <ComboBoxItem Content="M" />
+                        <ComboBoxItem Content="F" />
+                    </ComboBox>
+
+                    <Label Content="Correo" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Name="txtCorreoFun" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Teléfono" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Name="txtTelefonoFun" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Fecha Nacimiento" Foreground="White"  HorizontalAlignment="Center"/>
+                    <DatePicker Name="datpick_FechaNacimientoFun" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"></DatePicker>
+                    <Label Content="Turno" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Name="txtTurnoFun" Margin="5" Width="180"  Foreground="Black" BorderBrush= "#BDBDBD" BorderThickness="1" IsReadOnly="True"/>
+                    <ComboBox Name="cmbx_TurnoFun" Width="180" IsReadOnly="True" Visibility="Visible" SelectionChanged="SeleccionTurno" >
+                        <ComboBoxItem Content="Mañana" />
+                        <ComboBoxItem Content="Tarde" />
+                        <ComboBoxItem Content="Noche" />
+                    </ComboBox>
+
+                    <Label Content="Rango" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Name="txtRangoFun" Margin="5" Width="180" IsReadOnly="True"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+                    <ComboBox Name="cmbx_RangoFun" Width="180" Visibility="Visible" IsReadOnly="True" SelectionChanged="SeleccionRango" />
+
+                    <Label Content="Distrito" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Name="txtDistritoFun" Margin="5" Width="180" IsReadOnly="True" Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+                    <ComboBox Name="cmbx_DistritoFun" Width="180" Visibility="Visible" IsReadOnly="True" SelectionChanged ="SeleccionDistrito"></ComboBox>
+                </StackPanel>
+            </Border>
+        </Viewbox>
+
     </Grid>
 
 </Window>
