--- a/Policheck/Views/MainWindow.xaml
+++ b/Policheck/Views/MainWindow.xaml
@@ -298,6 +298,7 @@
                     <ComboBox Name="cmbxTipo"  Margin="5" Width="180"  IsEditable="False"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1">
                         <ComboBoxItem Content="Recuperar"></ComboBoxItem>
                         <ComboBoxItem Content="Eliminar"></ComboBoxItem>
+                        <ComboBoxItem Content="Modificar"></ComboBoxItem>
                     </ComboBox>
                 </StackPanel>
             </Border>
@@ -519,41 +520,33 @@
 
             <Border Background="#AA1E1E1E" CornerRadius="15" Padding="15" BorderBrush="White" BorderThickness="1" Width="250" >
                 <StackPanel Width="220">
-                    <Label Content="Nº Placa" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox x:Name="txtNumPlacaCiu" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1" IsReadOnly="True"/>
-
+                   
                     <Label Content="DNI" Foreground="White"  HorizontalAlignment="Center"/>
                     <TextBox x:Name="txtDNIC" Margin="5" Width="180"   Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
 
                     <Label Content="Nombre" Foreground="White"  HorizontalAlignment="Center"/>
                     <TextBox x:Name="txtNombreC" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
 
-                    <Label Content="1ºApellido" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox x:Name="txtPrimerApellC" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
-
-                    <Label Content="2ºApellido" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox x:Name="txtSegunApellC" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
-
                     <Label Content="Género" Foreground="White"  HorizontalAlignment="Center"/>
-                    <ComboBox x:Name="cmbxGeneroC" Margin="5" Width="180" Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1" IsEditable="False">
-                        <ComboBoxItem Content="M" />
-                        <ComboBoxItem Content="F" />
-                    </ComboBox>
-
-                    <Label Content="Correo" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox x:Name="txtCorreoC" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
-
-                    <Label Content="Teléfono" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox x:Name="txtTelefonoC" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
-
-                    <Label Content="Fecha Nacimiento" Foreground="White"  HorizontalAlignment="Center"/>
-                    <DatePicker x:Name="datpick_FechaNacimientoC" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+                    <TextBox x:Name="txtGeneroC" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
 
                     <Label Content="Direccion" Foreground="White"  HorizontalAlignment="Center"/>
                     <TextBox x:Name="txtDireccionC" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
 
-                    <Label Content="Estado Judicial" Foreground="White"  HorizontalAlignment="Center"/>
-                    <ComboBox x:Name="cmbx_EstadoJudicialCiu" Width="180" Visibility="Visible" IsReadOnly="True"  />
+                    <Label Content="Edad" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox x:Name="txtEdadC" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+                    
+                    <Label Content="Nombre Delito" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox x:Name="txtNombreDelitoC" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Cantdiad Delitos" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox x:Name="txtCantidadDelitosC" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Multa Economica" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox x:Name="txtMultaEconomicaC" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Codigo Postal" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox x:Name="txtCodigoPostalC" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
 
                 </StackPanel>
             </Border>
